--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link href="./bs5/bootstrap.min.css" rel="stylesheet">
-    <title>React App</title>
+    <title>Collection</title>
 
   </head>
   <body>
