--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link href="./bs5/bootstrap.min.css" rel="stylesheet">
+    <script async src="https://api.countapi.xyz/hit/collection.com/de3507c7-1cad-4936-a2f1-7657535a16d1?callback=websiteVisits"></script>
+
     <title>Collection</title>
 
   </head>
@@ -16,6 +18,10 @@
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <script src="./bs5/bootstrap.min.js"></script>
-    
+    <script>
+          function websiteVisits(response) {
+        document.querySelector("#visits").textContent = response.value;
+          }
+    </script>
   </body>
 </html>
