--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <script>
           function websiteVisits(response) {
         document.querySelector("#visits").textContent = response.value;
-        console.log(response.value)
+        // console.log(response.value);
           }
     </script>
   </body>
