--- a/public/index.html
+++ b/public/index.html
@@ -2,36 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <link rel="stylesheet" href="./animate.css">
-  <script src="./wow.min.js"></script>
-  <script>new WOW().init();</script>
-
-
-    <link href="./bs5/bootstrap.min.css" rel="stylesheet">
+    <meta
+      name="description"
+      content="Collection-Interiors"
+    />
+    <link rel="stylesheet" href="./animate.min.css" />
+    <script src="./wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+    <link href="./bs5/bootstrap.min.css" rel="stylesheet" />
 
     <title>Collection</title>
-
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <script src="./bs5/bootstrap.min.js"></script>
-    <script async src="https://api.countapi.xyz/hit/collection-interiors.herokuapp.com/de3507c7-1cad-4936-a2f1-7657535a16d1?callback=websiteVisits"></script>
+    <script
+      async
+      src="https://api.countapi.xyz/hit/collection-interiors.herokuapp.com/de3507c7-1cad-4936-a2f1-7657535a16d1?callback=websiteVisits"
+    ></script>
     <script>
-          function websiteVisits(response) {
+      function websiteVisits(response) {
         document.querySelector("#visits").textContent = response.value;
         // console.log(response.value);
-          }
+      }
     </script>
   </body>
 </html>
